syntax = "proto3";
option go_package = "github.com/argoproj/argo/pkg/apiclient/info";

import "google/api/annotations.proto";
import "github.com/argoproj/argo/pkg/apis/workflow/v1alpha1/generated.proto";

package info;

message GetInfoRequest {
}

message InfoResponse {
    string managedNamespace = 1;
    repeated github.com.argoproj.argo.pkg.apis.workflow.v1alpha1.Link links = 2;
}

message GetVersionRequest {
}

message GetUserInfoRequest {
}

message GetUserInfoResponse {
    string issuer = 1;
    string subject = 2;
    repeated string groups = 3;
    string email = 4;
    bool emailVerified = 5;
}

service InfoService {
    rpc GetInfo (GetInfoRequest) returns (InfoResponse) {
        option (google.api.http).get = "/api/v1/info";
    }
    rpc GetVersion (GetVersionRequest) returns (github.com.argoproj.argo.pkg.apis.workflow.v1alpha1.Version) {
        option (google.api.http).get = "/api/v1/version";
    }
    rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse) {
        option (google.api.http).get = "/api/v1/userinfo";
    }
}